// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SliderRenderer snapshot (T-0009-059) — expressive×health matches snapshot at expressive×health 1`] = `
<View>
  <Text
    accessibilityElementsHidden={true}
    style={
      {
        "color": "#6B5F56",
        "fontSize": 14,
        "fontWeight": "400",
        "letterSpacing": 0,
        "lineHeight": 20,
        "marginBottom": 4,
      }
    }
  >
    Progress
  </Text>
  <View
    accessibilityLabel="Progress"
    accessibilityRole="adjustable"
    accessibilityValue={
      {
        "max": 100,
        "min": 0,
        "now": 50,
        "text": "50%",
      }
    }
    accessible={true}
    onAccessibilityAction={[Function]}
    style={
      {
        "paddingVertical": 12,
      }
    }
    testID="slider-container-sl2"
  >
    <View
      onLayout={[Function]}
      style={
        {
          "backgroundColor": "#EFE9DF",
          "borderRadius": 999,
          "height": 6,
          "position": "relative",
        }
      }
    >
      <View
        style={
          [
            {
              "backgroundColor": "#4A7438",
              "borderRadius": 999,
              "height": 6,
              "left": 0,
              "position": "absolute",
              "top": 0,
            },
            {
              "width": "50%",
            },
          ]
        }
      />
    </View>
    <View
      onMoveShouldSetResponder={[Function]}
      onMoveShouldSetResponderCapture={[Function]}
      onResponderEnd={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderReject={[Function]}
      onResponderRelease={[Function]}
      onResponderStart={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      onStartShouldSetResponderCapture={[Function]}
      style={
        [
          {
            "backgroundColor": "#FFFFFF",
            "borderColor": "#EFE9DF",
            "borderRadius": 14,
            "borderWidth": 1,
            "elevation": 2,
            "height": 28,
            "position": "absolute",
            "shadowColor": "#000",
            "shadowOffset": {
              "height": 1,
              "width": 0,
            },
            "shadowOpacity": 0.15,
            "shadowRadius": 2,
            "top": 1,
            "width": 28,
          },
          {
            "transform": [
              {
                "translateX": 136,
              },
            ],
          },
        ]
      }
      testID="slider-thumb-sl2"
    />
    <View
      style={
        [
          {
            "alignItems": "center",
            "backgroundColor": "#4A7438",
            "borderRadius": 6,
            "minWidth": 28,
            "paddingHorizontal": 6,
            "paddingVertical": 2,
            "position": "absolute",
            "top": -28,
          },
          {
            "transform": [
              {
                "translateX": 136,
              },
            ],
          },
        ]
      }
      testID="slider-badge-sl2"
    >
      <Text
        style={
          {
            "color": "#FFFFFF",
            "fontSize": 11,
            "fontWeight": "600",
          }
        }
      >
        50%
      </Text>
    </View>
  </View>
  <View
    style={
      {
        "flexDirection": "row",
        "justifyContent": "space-between",
        "marginTop": 4,
      }
    }
  >
    <Text
      style={
        {
          "color": "#B0A89E",
          "fontSize": 11,
        }
      }
    >
      0%
    </Text>
    <Text
      style={
        {
          "color": "#B0A89E",
          "fontSize": 11,
        }
      }
    >
      100%
    </Text>
  </View>
</View>
`;

exports[`SliderRenderer snapshot (T-0009-059) — productive×focus matches snapshot at productive×focus 1`] = `
<View>
  <Text
    accessibilityElementsHidden={true}
    style={
      {
        "color": "#5C6470",
        "fontSize": 13,
        "fontWeight": "400",
        "letterSpacing": 0.1,
        "lineHeight": 18,
        "marginBottom": 4,
      }
    }
  >
    Progress
  </Text>
  <View
    accessibilityLabel="Progress"
    accessibilityRole="adjustable"
    accessibilityValue={
      {
        "max": 100,
        "min": 0,
        "now": 50,
        "text": "50%",
      }
    }
    accessible={true}
    onAccessibilityAction={[Function]}
    style={
      {
        "paddingVertical": 12,
      }
    }
    testID="slider-container-sl2"
  >
    <View
      onLayout={[Function]}
      style={
        {
          "backgroundColor": "#ECEEF1",
          "borderRadius": 999,
          "height": 4,
          "position": "relative",
        }
      }
    >
      <View
        style={
          [
            {
              "backgroundColor": "#4F46E5",
              "borderRadius": 999,
              "height": 4,
              "left": 0,
              "position": "absolute",
              "top": 0,
            },
            {
              "width": "50%",
            },
          ]
        }
      />
    </View>
    <View
      onMoveShouldSetResponder={[Function]}
      onMoveShouldSetResponderCapture={[Function]}
      onResponderEnd={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderReject={[Function]}
      onResponderRelease={[Function]}
      onResponderStart={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      onStartShouldSetResponderCapture={[Function]}
      style={
        [
          {
            "backgroundColor": "#FFFFFF",
            "borderColor": "#ECEEF1",
            "borderRadius": 12,
            "borderWidth": 1,
            "elevation": 2,
            "height": 24,
            "position": "absolute",
            "shadowColor": "#000",
            "shadowOffset": {
              "height": 1,
              "width": 0,
            },
            "shadowOpacity": 0.15,
            "shadowRadius": 2,
            "top": 2,
            "width": 24,
          },
          {
            "transform": [
              {
                "translateX": 138,
              },
            ],
          },
        ]
      }
      testID="slider-thumb-sl2"
    />
    <View
      style={
        [
          {
            "alignItems": "center",
            "backgroundColor": "#4F46E5",
            "borderRadius": 6,
            "minWidth": 28,
            "paddingHorizontal": 6,
            "paddingVertical": 2,
            "position": "absolute",
            "top": -28,
          },
          {
            "transform": [
              {
                "translateX": 138,
              },
            ],
          },
        ]
      }
      testID="slider-badge-sl2"
    >
      <Text
        style={
          {
            "color": "#FFFFFF",
            "fontSize": 11,
            "fontWeight": "600",
          }
        }
      >
        50%
      </Text>
    </View>
  </View>
  <View
    style={
      {
        "flexDirection": "row",
        "justifyContent": "space-between",
        "marginTop": 4,
      }
    }
  >
    <Text
      style={
        {
          "color": "#A2A8B2",
          "fontSize": 11,
        }
      }
    >
      0%
    </Text>
    <Text
      style={
        {
          "color": "#A2A8B2",
          "fontSize": 11,
        }
      }
    >
      100%
    </Text>
  </View>
</View>
`;
